fix: card styling (border-raduis, z-index)

--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -2,12 +2,12 @@
 @import "./setting/_values";
 
 @import url('https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sawarabi+Mincho&display=swap');
 
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Amiri', 'Noto Sans JP';
+    font-family: 'Amiri', 'Sawarabi Mincho';
     color: $secondary-color;
 }
 body {
@@ -67,6 +67,70 @@ hr {
     border: solid 1px $secondary-color;
 }
 
+/* SWITCHER */
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
 /* background templates */
 .back-white {
     color: $secondary-color;
@@ -122,6 +186,15 @@ hr {
 
 #kotlin-icon {
   width: 56px;
+}
+
+.overview-list li{
+  margin: 0.6em 0px;
+}
+
+td{
+  vertical-align: top;
+  padding: 5px;
 }
 
 /* NOT USED but incase, for progressbar */
