--- a/scss/module/_cards.scss
+++ b/scss/module/_cards.scss
@@ -19,17 +19,30 @@
 .card-img-top {
     padding: 2px;
     filter: grayscale(100%) blur(0.5px);
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    margin-bottom: -5px;
+    z-index: -1;
 }
 
-.card-title {
+.card-title, .card-text {
     margin-bottom: 0px;
-}
-
-.card-text {
-    margin-bottom: 0px;
+    white-space: nowrap;
 }
 
 .card-body {
     border: solid 2px $primary-color;
     border-radius: 10px;
+}
+
+@media screen and (max-width:480px){
+    .card-description{
+        display: none;
+        white-space: nowrap;
+        overflow:hidden
+    }
+    .card-text, .card-title{
+        white-space: nowrap;
+        overflow:hidden
+    }
 }
